# autonomous-task-agent

./: .cursorrules  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agents/: base.py  dispatcher.py  prompts.py  reasoning.py
app/schemas/: task.py
app/services/: task_service.py
app/tools/: __init__.py  base.py  escalation.py  notifications.py  orders.py  pricing.py
docs/: ARCHITECTURE.md  README.md  ROADMAP.md
scripts/: deploy.sh
tests/: __init__.py  test_api.py  test_schemas.py  test_tools.py
